widen Logs card, fix pods & details spacing

--- a/dash/frontend/src/app/modules/private/pages/cluster/cluster-summary/cluster-summary.component.scss
+++ b/dash/frontend/src/app/modules/private/pages/cluster/cluster-summary/cluster-summary.component.scss
@@ -111,7 +111,7 @@
 
 .cluster-events-card {
   position: absolute;
-  width: calc(100% - 43px);
+  width: 100%;
   left: 1px;
   bottom: 0;
   padding: 15px 0 0 15px;
