--- a/dash/frontend/src/app/modules/private/pages/cluster/kubernetes-pods/kubernetes-pods.component.scss
+++ b/dash/frontend/src/app/modules/private/pages/cluster/kubernetes-pods/kubernetes-pods.component.scss
@@ -18,6 +18,8 @@ div.kubernetes-pods-container {
 
       & .mat-elevation-z8 {
         // flex: 1;
+        height: auto;
+        min-height: 200px;
         overflow: auto;
         background: #F9F9F9;
         > mat-table {
